# fluidsim

./: .gitignore  CMakeLists.txt  README.md  pbuild.toml
include/: fluid.h  particles.h  renderer.h  simulation.h  utils.h
resources/shaders/: display.fs  fluid2d_advect.glsl  fluid2d_analyze.glsl  fluid2d_curl.glsl  fluid2d_div.glsl  fluid2d_force.glsl  fluid2d_inlet.glsl  fluid2d_jacobi.glsl  fluid2d_paint.glsl  fluid2d_splat.glsl  fluid2d_sub.glsl  fluid2d_vort.glsl  obstacle.fs  particle_advect.glsl
src/: fluid.c  main.c  particles.c  renderer.c  simulation.c  utils.c
